Fix collection path truncation (+arabic)

--- a/src/co/bookmarks/edit/form/collection/suggested.module.styl
+++ b/src/co/bookmarks/edit/form/collection/suggested.module.styl
@@ -39,7 +39,7 @@
 
     span {
         direction: ltr;
-        unicode-bidi: bidi-override;
+        unicode-bidi: embed;
     }
 }
 
