--- a/src/co/collections/item/title.module.styl
+++ b/src/co/collections/item/title.module.styl
@@ -11,7 +11,7 @@
 
 .path span {
     direction: ltr;
-    unicode-bidi: bidi-override;
+    unicode-bidi: embed;
 }
 
 .parents {
